--- a/杂项.md
+++ b/杂项.md
@@ -427,6 +427,37 @@ https://zhuanlan.zhihu.com/p/81681440
 
 https://www.cnblogs.com/quant-lee/p/6639008.html
 
+从知乎的这个链接的case2，解决了我“undefined reference to rdma_get_devices”的部分问题：
+
+```bash
+# 之前是这样的命令，一直报错 undefined reference to 'rdma_get_devices', undefined ...to 'ibv_query_device', undefined ... to 'rdma_free_deivecs'
+gcc -lrt  -L/home/rdmacore/rdma-core-master/build/lib/ -lrdmacm  devices.o -o devices
+
+# 目标文件之间有依赖关系，A依赖B, A要放在前面才行，把devices.o放到前面
+gcc devices.o -lrt -L/home/rdmacore/rdma-core-master/build/lib/ -lrdmacm -o devices
+
+# 上面之后报了另外的错误：undefined reference to symbol 'ibv_query_devices@@IBVERBS_1.1' /usr/bin/ld: libibverbs.so.1: error adding symbols:DSO missing from command line
+
+# 我将 ibibvers.so这个库添加上就OK了，终于编译成功了！！！
+gcc devices.o -lrt -L/home/rdmacore/rdma-core-master/build/lib/ -lrdmacm -libverbs -o devices
+```
+
+
+
+注意，上面的报错，其实提示很明显了：**’DSO missing from command line‘**
+
+https://blog.csdn.net/zrq293/article/details/105969423/
+
+问题可以简单描述为：当链接可执行文件时，依赖于libA.so，而libA.so又依赖于libB.so，而且可执行文件中还直接调用了libB.so中的函数，那么此时链接就会出现错误。
+
+
+
+```
+# 查看so文件依赖了哪些其他的库
+ldd librdmacm.so
+
+```
+
 
 
 查看so文件是64位还是32位：
@@ -438,3 +469,88 @@ librdmacm.so.1.3.39.0: ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), d
 # 也可以使用 readelf -h <file> 输出格式更好看
 readelf -h librdmacm.so.1.3.39.0
 ```
+
+
+
+
+
+ls-d
+
+
+
+
+
+2022年3月24日14:35:18
+
+windows cmd免密登录vm:
+
+现将本机的id_rsa.pub公钥上传到vm的 /root/.ssh文件夹中，记得先改名称，免得与之间存在的服务器公钥名称冲突而覆盖了
+
+```bash
+# 服务器中将公钥添加到授信列表中
+cat id_rsa_xxx.pub >> authorized_keys
+# windows中用cmd ssh登录 添加上私钥名称，就可以直接登录了，不需要密码，但是登录其他用户，还是需要密码的
+ssh root@127.0.0.1 -p 2222 -i C:\Users\D50019115\.ssh\id_rsa
+
+# 问题：上面使用127可以连接，使用该vm另外的ip 192.168.56.101无法登录，moba的ssh是可以用101登录的
+ssh root@192.168.56.101 -p 2222 -i C:\Users\D50019115\.ssh\id_rsa
+```
+
+使用vscode的 remote-ssh连接用192的ip也失败了，用127的ip一开始也失败了，但是后面删除了 c盘.ssh目录下面的know_host之后，再次连接就OK了，但是速度很慢，一直是“正在打开远程”。
+
+
+
+
+
+##### 库的链接顺序问题：
+
+https://www.cnblogs.com/ironx/p/4939508.html
+
+如果你的库在链接时安排的顺序是：foo.o -lz bar.o。那么gcc的链接器先搜索库foo，然后是z库，然后是bar库。
+
+这样就带来一个问题，如果库bar调用了库z里面的函数，但是链接器是先搜索的库z，这时候并没有发现库bar调用库z啊，所以就不会把库z中的这部分函数体挑出来进行链接。
+
+而是只把库z中，被foo库调用的函数体挑出来。
+
+
+
+
+
+2022年3月25日14:58:53
+
+------
+
+##### linux头文件搜索
+
+```bash
+# linux 头文件搜索路径
+root@xyvm2:/usr/include/linux# echo 'main(){}'|gcc -E -v -
+...
+#include <...> search starts here:
+ /usr/lib/gcc/x86_64-linux-gnu/9/include
+ /usr/local/include # 这个目录里面放的是我之前学习cmake后install后将MathFunctions.h头文件放到了这里
+ /usr/include/x86_64-linux-gnu
+ /usr/include # 大部分头文件就在这里 rdma的目录也在这里
+
+```
+
+rdma 头文件目录：
+
+```bash
+/usr/include/rdma # 里面有
+/usr/include/valgrind # 里面有memcheck.h
+```
+
+问题 /usr/include/rdma目录里面的和我自己编译的rdmacore-master/build/include/rdma 相比，少了3个头文件，少了rdma_cma.h等头文件，所以我之前编译demo的时候，才一直提示找不到rdma_cma.h。
+
+但是这个目录里面又有rdma_netlink.h和rdma_user_cm.h，现在我发现这两个文件都是链接到 **kernel-headers**目录里面的。rdma_cma.h是链接到**librdmacm**目录里面的，因为是用户态的，所以这个文件就没有直接包含在系统里面吧。
+
+```
+root@xyvm2:/home/rdmacore/rdma-core-master/build/include/rdma# ls
+...
+lrwxrwxrwx 1 root root   52 Jan 17 08:25 rdma_cma.h -> /home/rdmacore/rdma-core-master/librdmacm/rdma_cma.h
+lrwxrwxrwx 1 root root   66 Jan 17 08:25 rdma_netlink.h -> /home/rdmacore/rdma-core-master/kernel-headers/rdma/rdma_netlink.h
+lrwxrwxrwx 1 root root   66 Jan 17 08:25 rdma_user_cm.h -> /home/rdmacore/rdma-core-master/kernel-headers/rdma/rdma_user_cm.h
+
+```
+
