--- a/杂项.md
+++ b/杂项.md
@@ -1128,3 +1128,65 @@ lrwxrwxrwx 1 root root   66 Jan 17 08:25 rdma_user_cm.h -> /home/rdmacore/rdma-c
 
 ```
 
+```
+# -L可以将软链接指向的文件复制过来
+cp -rL /src /dst 
+```
+
+
+
+设置gcc头文件搜索目录：
+
+> `C_INCLUDE_PATH`、`CPLUS_INCLUDE_PATH`以及`CPATH`常被用于在全局性地添加预处理C/C++时的包含目录，其中`C_INCLUDE_PATH`仅对预处理C有效，`CPLUS_INCLUDE_PATH`仅对预处理C++有效，而`CPATH`对所有语言均有效。
+
+https://blog.csdn.net/weixin_44327262/article/details/105860213
+
+```bash
+echo $C_INCLUDE_PATH
+export C_INCLUDE_PATH=$C_INCLUDE_PATH:/home/rdmacore/rdma-core-master/build/include/
+```
+
+
+
+```bash
+# 查看系统是否有加载该库
+ldconfig -v |grep "librdmacm" 
+# 输出
+librdmacm.so.1 -> librdmacm.so.1.2.28.0
+```
+
+在我把/etc/ld.so.conf中的路径删除之前，这里查询会有两个输出，另外一个librdmacm指向so.1.3.39那个，那个是在我编译的rdmacore中lib目录下的那个
+
+
+
+
+
+ldconfig做的这些东西都与运行程序时有关，跟编译时一点关系都没有。编译的时候还是该加-L就得加，不要混淆了!!!
+
+
+
+```bash
+# 我把rdmacore中lib目录整体复制到 /usr/lib/rdma里面去了，这样不用每次编译都指定 -L参数了，但是仍然提示找不到 -lrdmacm
+cp -r /home/rdmacore/rdma-core-master/build/lib/ /usr/lib/rdma/
+gcc -lrt -lrdmacm client.o utilities.o -o client
+
+# 还是要加-L，这个目录有 librdmacm.so.1.3.39.0
+gcc -lrt -L/usr/lib/rdma/ -lrdmacm client.o utilities.o -o client
+
+# 这样也是提示找不到 -lrdmacm，但是这个目录里面有 librdmacm.so.1.2.28.0
+gcc -lrt -L/usr/lib/x86_64-linux-gnu -lrdmacm client.o utilities.o -o client
+
+
+```
+
+
+
+解决“DSO missing from command line”的问题
+
+https://blog.csdn.net/zrq293/article/details/105969423/
+
+```
+# 添加--copy-dt-needed-entries，链接器自己回去加载lrdmacm需要的库文件
+LIBS = -lrt -Wl,--copy-dt-needed-entries -L/usr/lib/rdma/ -lrdmacm
+```
+
