--- a/linux/包管理.md
+++ b/linux/包管理.md
@@ -677,3 +677,45 @@ lfp@legion:/var/lib/apt/lists$ md5sum /var/cache/apt/archives/nodejs_12.16.3-1no
    5. 更新
 
       > sudo apt update
+
+
+
+
+
+#### apt和apt-get区别
+
+ubuntu16.04引入了apt命令，**推荐使用apt命令**，apt-get命令低级，很多用户使用不到。
+
+如果你已阅读过我们的 apt-get 命令指南，可能已经遇到过许多类似的命令，如apt-cache、apt-config 等。如你所见，这些命令都比较低级又包含众多功能，普通的 Linux 用户也许永远都不会使用到。换种说法来说，就是最常用的 Linux 包管理命令都被分散在了 apt-get、apt-cache 和 apt-config 这三条命令当中。
+
+apt 命令的引入就是为了解决命令过于分散的问题，它包括了 apt-get 命令出现以来使用最广泛的功能选项，以及 apt-cache 和 apt-config 命令中很少用到的功能。
+
+在使用 apt 命令时，用户不必再由 apt-get 转到 apt-cache 或 apt-config，而且 apt 更加结构化，并为用户提供了管理软件包所需的必要选项。
+
+简单来说就是：apt = apt-get、apt-cache 和 apt-config 中最常用命令选项的集合。
+
+
+
+### 常用命令
+
+```bash
+# 安装软件包
+apt install
+# 移除软件包
+apt remove
+# 移除软件包及配置文件
+apt purge
+# 刷新存储库索引
+apt update
+# 升级所有可升级的软件包
+apt upgrade
+# 自动删除不需要的软件包
+apt autoremove
+# 升级软件包时自动处理依赖关系
+apt full-upgrade
+# 搜索软件包
+apt search
+# 显示安装细节
+apt show
+```
+
