--- a/杂项.md
+++ b/杂项.md
@@ -27,3 +27,9 @@ ssh root@192.168.56.101 -p 2222 -i C:\Users\D50019115\.ssh\id_rsa
 ```
 
 使用vscode的 remote-ssh连接用192的ip也失败了，用127的ip一开始也失败了，但是后面删除了 c盘.ssh目录下面的know_host之后，再次连接就OK了，但是速度很慢，一直是“正在打开远程”。
+
+
+
+windows 是 CR LF表示换行
+
+unix是 LF表示换行
