--- a/刷题/刷题笔记.md
+++ b/刷题/刷题笔记.md
@@ -226,3 +226,31 @@ while(p != 0){
 ```
 
 注意：我一开始 include的是 <string>, 提示我找不到 strcpy和 strtok，然后我把它改成了<cstring>,就可以了！！！
+
+
+
+直接取容器最大值TODO
+
+```
+int r = *max_element(arr.begin(), arr.end());
+```
+
+
+
+#### 二维数组的处理
+
+TODO
+
+
+
+max_element
+
+max
+
+
+
+```
+// vector<int, vector<int>> dp(n+1, vector<int>(n+1)); // 错误！！！
+vector<vector<int>> dp(n+1, vector<int>(n+1));
+```
+
