--- a/杂项.md
+++ b/杂项.md
@@ -33,3 +33,60 @@ ssh root@192.168.56.101 -p 2222 -i C:\Users\D50019115\.ssh\id_rsa
 windows 是 CR LF表示换行
 
 unix是 LF表示换行
+
+
+
+```bash
+# config 文件内容是：
+Host github.com
+User wjsgtxy@163.com
+Hostname ssh.github.com
+PreferredAuthentications id_25519.ppk
+IdentityFile ~/.ssh/id_rsa
+Port 443
+```
+
+
+
+IDL是Interface description language的缩写，指接口描述语言，是[CORBA](https://baike.baidu.com/item/CORBA/2776997)规范的一部分，是跨平台开发的基础。
+
+https://baike.baidu.com/item/IDL/34727
+
+> IDL是用来描述软件组件接口的一种计算机语言。IDL通过一种中立的方式来描述[接口](https://baike.baidu.com/item/%E6%8E%A5%E5%8F%A3/15422203)，使得在不同平台上运行的对象和用不同语言编写的程序可以相互通信交流；比如，一个组件用[C++](https://baike.baidu.com/item/C%2B%2B/99272)写成，另一个组件用[Java](https://baike.baidu.com/item/Java/85979)写成。
+>
+> IDL通常用于远程调用软件。 在这种情况下，一般是由远程客户终端调用不同操作系统上的对象组件，并且这些对象组件可能是由不同计算机语言编写的。IDL建立起了两个不同操作系统间通信的桥梁。
+>
+> 从本质上讲，OMG IDL接口定义语言不是作为程序设计语言体现在CORBA体系结构中的，而是用来描述产生对象调用请求的客户对象和服务对象之间的接口的语言。OMG IDL文件描述数据类型和方法框架，而服务对象则为一个指定的对象实现提供上述数据和方法。
+>
+> OMG IDL文件描述了服务器提供的服务功能，客户机可以根据该接口文件描述的方法向服务器提出业务请求。在大多数CORBA产品中都提供IDL到相关编程语言的编译器。程序设计人员只需将定义的接口文件输入编译器，设定编译选项后，就可以得到与程序设计语言相关的接口框架文件和辅助文件。
+
+
+
+对象管理组织（英文Object Management Group,缩写为OMG）是一个国际协会，开始的目的是为分布式面向对象系统建立标准，现在致力于建立对程序、系统 和 业务流程建模的标准，以及基于模型的标准。
+
+> OMG是一个国际性的非盈利协会。任何组织都可以加入，在缴纳会费后可以参与OMG标准的制定和投票讨论。
+>
+> OMG只提供标准的详细说明书，并不提供对于标准的实现软件。但是在一个标准的草案被接纳成为正式标准之前，提交这个草案并被接受的成员必须保证，他们在一年之内将会开发一个服从这个标准的产品。这样就阻止了没有参照实现的标准。
+>
+> OMG鼓励其他的企业或开源组织开发服从OMG标准的产品，并且设法开发强制机制，让不同的软件具有通用性。
+>
+> OMG的广泛使用的标准包括UML,MOF，XMI [业务流程建模标记法](https://baike.baidu.com/item/%E4%B8%9A%E5%8A%A1%E6%B5%81%E7%A8%8B%E5%BB%BA%E6%A8%A1%E6%A0%87%E8%AE%B0%E6%B3%95/6674390)(BPMN)等。
+
+
+
+###### UML
+
+统一建模语言(Unified Modeling Language，UML)是一种为[面向对象](https://baike.baidu.com/item/%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1/2262089)系统的产品进行说明、可视化和[编制](https://baike.baidu.com/item/%E7%BC%96%E5%88%B6/9907954)文档的一种标准语言，是非专利的第三代建模和规约语言。UML是面向对象设计的建模工具，独立于任何具体程序设计语言。
+
+
+
+###### 公共对象请求代理体系结构
+
+> CORBA（Common ObjectRequest Broker Architecture公共对象请求代理体系结构）是由[OMG](https://baike.baidu.com/item/OMG/3041465)组织制订的一种标准的[面向对象](https://baike.baidu.com/item/%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1/2262089)应用程序体系规范。或者说CORBA体系结构是对象管理组织（OMG）为解决[分布式处理](https://baike.baidu.com/item/%E5%88%86%E5%B8%83%E5%BC%8F%E5%A4%84%E7%90%86/3352171)环境(DCE)中，硬件和软件系统的**互连**而提出的一种解决方案；OMG组织是一个国际性的[非盈利组织](https://baike.baidu.com/item/%E9%9D%9E%E7%9B%88%E5%88%A9%E7%BB%84%E7%BB%87/5622954)，其职责是为[应用](https://baike.baidu.com/item/%E5%BA%94%E7%94%A8/3994271)开发提供一个公共框架，制订工业指南和对象管理规范，加快对象技术的发展。
+
+
+
+###### RPC框架：从原理到选型，一文带你搞懂RPC
+
+https://mp.weixin.qq.com/s/ll4nUVB28KpyTMS93xAckQ
+
