--- a/刷题/刷题笔记.md
+++ b/刷题/刷题笔记.md
@@ -254,3 +254,38 @@ max
 vector<vector<int>> dp(n+1, vector<int>(n+1));
 ```
 
+
+
+```c++
+int m = INT_MIN; // int 最小值，不用写什么 -INT_MIN不行，会超出表示范围
+```
+
+
+
+#### [130. 被围绕的区域](https://leetcode.cn/problems/surrounded-regions/)
+
+处理坐标四个方向的移动的方法
+
+```c++
+    const int dx[4] = {1, -1, 0, 0};
+    const int dy[4] = {0, 0, 1, -1};
+    for (int i = 0; i < 4; i++) {
+    	int mx = x + dx[i], my = y + dy[i]; // 这里循环，就可以在(x,y)的基础上向4个方向移动了
+    	if (mx < 0 || my < 0 || mx >= n || my >= m || board[mx][my] != 'O') {
+    		continue;
+    	}
+    	que.emplace(mx, my);
+    	board[mx][my] = 'A';
+    }
+```
+
+
+
+
+
+todo 
+
+```
+word.find(searchWord) == 0 // 检查是不是前缀
+```
+
