回溯和位操作

--- a/刷题/刷题笔记.md
+++ b/刷题/刷题笔记.md
@@ -289,3 +289,10 @@ todo
 word.find(searchWord) == 0 // 检查是不是前缀
 ```
 
+
+
+string 有 
+
+push_back 和 pop_back用来添加和删除字符串的
+
+没有push，只有append(string s);
