--- a/刷题/回溯.md
+++ b/刷题/回溯.md
@@ -97,3 +97,48 @@ public:
 
 
 
+## 括号题目
+
+| 题目                                                         | 时间               | 难度 | 备注      |
+| ------------------------------------------------------------ | ------------------ | ---- | --------- |
+| [22. 括号生成](https://leetcode.cn/problems/generate-parentheses/) | 2022-5-25 00:21:42 | 中等 | 10min, ok |
+|                                                              |                    |      |           |
+|                                                              |                    |      |           |
+
+
+
+22. 括号生成
+
+    ```c++
+    class Solution {
+    public:
+        vector<string> generateParenthesis(int n) {
+            // 2022-5-25 00:22:23 使用回溯，暴力遍历，先写回溯框架
+            vector<string> res;
+            string s = "";
+            backtrace(n, n, res, s);
+            return res;
+        }
+    
+        void backtrace(int left, int right, vector<string>& res, string s){
+            // 判断
+            if(left <0 || right<0 || right<left) return;
+            if(left == 0 && right == 0){
+                res.push_back(s); // 合法括号
+            }
+    
+            // 遍历
+            // 添加一个左括号
+            s.push_back('(');
+            backtrace(left-1, right, res, s);
+            s.pop_back();
+    
+            // 添加一个右括号
+            s.push_back(')');
+            backtrace(left, right-1, res, s);
+            s.pop_back();
+        }
+    };
+    ```
+
+    
