--- a/刷题/二叉树.md
+++ b/刷题/二叉树.md
@@ -227,3 +227,14 @@ public:
 | [96. 不同的二叉搜索树](https://leetcode.cn/problems/unique-binary-search-trees/) |      | 中等 |      |
 | [95. 不同的二叉搜索树 II](https://leetcode.cn/problems/unique-binary-search-trees-ii/) |      | 中等 |      |
 
+
+
+## 其他
+
+
+
+| 题目                                                         | 时间               | 难度 | 备注                               |
+| ------------------------------------------------------------ | ------------------ | ---- | ---------------------------------- |
+| [222. 完全二叉树的节点个数](https://leetcode.cn/problems/count-complete-tree-nodes/) | 2022-5-25 21:08:34 | 中等 | 完全二叉树计算节点数量，有优化空间 |
+|                                                              |                    | 中等 |                                    |
+
