--- a/刷题/动态规划.md
+++ b/刷题/动态规划.md
@@ -66,3 +66,107 @@ public:
 };
 ```
 
+
+
+## 背包问题
+
+##### 0-1背包问题 https://labuladong.github.io/algo/3/25/80/
+
+描述：
+
+给你一个可装载重量为 `W` 的背包和 `N` 个物品，每个物品有重量和价值两个属性。其中第 `i` 个物品的重量为 `wt[i]`，价值为 `val[i]`，现在让你用这个背包装物品，最多能装的价值是多少？
+
+**第一步要明确两点，「状态」和「选择」**。
+
+**状态有两个，就是「背包的容量」和「可选择的物品」**。
+
+**选择就是「装进背包」或者「不装进背包」**
+
+```c++
+// 框架
+for 状态1 in 状态1的所有取值：
+    for 状态2 in 状态2的所有取值：
+        for ...
+            dp[状态1][状态2][...] = 择优(选择1，选择2...)
+```
+
+```
+int knapsack(int W, int N, int[] wt, int[] val) {
+    // base case 已初始化
+    int[][] dp = new int[N + 1][W + 1];
+    for (int i = 1; i <= N; i++) {
+        for (int w = 1; w <= W; w++) {
+            if (w - wt[i - 1] < 0) {
+                // 这种情况下只能选择不装入背包
+                dp[i][w] = dp[i - 1][w];
+            } else {
+                // 装入或者不装入背包，择优
+                dp[i][w] = Math.max(
+                    dp[i - 1][w - wt[i-1]] + val[i-1], 
+                    dp[i - 1][w]
+                );
+            }
+        }
+    }
+    
+    return dp[N][W];
+}
+```
+
+
+
+##### 子集背包问题
+
+[416. 分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/)
+
+子集问题转换成背包问题：**给一个可装载重量为 `sum / 2` 的背包和 `N` 个物品，每个物品的重量为 `nums[i]`。现在让你装物品，是否存在一种装法，能够恰好将背包装满**？
+
+```
+dp[i][j]=true/false
+```
+
+先不优化空间写出来，然后在优化空间
+
+记得空间优化的原则：保证未使用的变量还存在，使用过的可以覆盖，灵活变更for循环的遍历循序，从前往后，从后往前。
+
+```c++
+class Solution {
+public:
+    bool canPartition(vector<int>& nums) {
+        // 2022-5-25 22:34:08
+        // 动态规划，子集背包问题, 转换成 sum/2的背包, 是否能够刚好填充背包
+        // dp[i][j]=true 表示 使用前 i个数，能够凑出容量j
+        // dp[i][j] = dp[i-1][j] 这个不要 // 第i个数下标为i-1
+        // dp[i][j] = dp[i-1][j-nums[i-1]] 这个数要
+        int sum = accumulate(nums.begin(), nums.end(), 0); // 0是初始值
+        if(sum%2) return false; // 不能划分直接返回
+
+        int n = nums.size();
+        vector<vector<bool>> dp(n+1, vector<bool>(sum/2+1, false));
+        for(int i=0; i<=n; i++){
+            dp[i][0] = true; // todo 这里我一开始没有初始化为true
+        }
+
+        for(int i=1; i<=n; i++){
+            for(int j=1; j<= sum/2; j++){
+                if(j < nums[i-1]){
+                    // 如果当前物品比包还重，则肯定不要
+                    dp[i][j] = dp[i-1][j];
+                    continue;
+                }
+                dp[i][j] = dp[i-1][j] || dp[i-1][j-nums[i-1]]; // 只要这两种情况，一种满足，就能凑够这个背包
+            }
+        }
+        return dp[n][sum/2];
+    }
+};
+```
+
+
+
+
+
+
+
+##### 完全背包问题
+
