--- a/刷题/刷题笔记.md
+++ b/刷题/刷题笔记.md
@@ -296,3 +296,10 @@ string 有
 push_back 和 pop_back用来添加和删除字符串的
 
 没有push，只有append(string s);
+
+
+
+```
+int sum = accumulate(nums.begin(), nums.end(), 0);
+```
+
