--- a/刷题/杂项.md
+++ b/刷题/杂项.md
@@ -1,9 +1,13 @@
 ## 位运算
 
-[191. 位1的个数](https://leetcode.cn/problems/number-of-1-bits/)
 
-[231. 2 的幂](https://leetcode.cn/problems/power-of-two/)
 
-[136. 只出现一次的数字](https://leetcode.cn/problems/single-number/)
+| 题目                                                         | 难度 | 备注                                                         |
+| ------------------------------------------------------------ | ---- | ------------------------------------------------------------ |
+| [191. 位1的个数](https://leetcode.cn/problems/number-of-1-bits/) | 简单 | n&(n-1) 可以得到1的个数                                      |
+| [231. 2 的幂](https://leetcode.cn/problems/power-of-two/)    | 简单 | 2的幂就是1的个数为1的                                        |
+| [136. 只出现一次的数字](https://leetcode.cn/problems/single-number/) | 简单 | 异或位运算，a^a = 0 0^a=a 同时还满足结合律 (a^b)^c = a^(b^c) |
+| [268. 丢失的数字](https://leetcode.cn/problems/missing-number/) | 简单 | 方法很多，这里用的异或，以后看看其他方法                     |
 
-[268. 丢失的数字](https://leetcode.cn/problems/missing-number/)
+
+
