--- a/杂项.md
+++ b/杂项.md
@@ -90,3 +90,30 @@ https://baike.baidu.com/item/IDL/34727
 
 https://mp.weixin.qq.com/s/ll4nUVB28KpyTMS93xAckQ
 
+
+
+
+
+##### host文件修改与刷新
+
+1、window环境：
+
+hosts文件位置：C:\windows\system32\drivers\etc
+
+```bash
+# 清除DNS缓存内容
+ipconfig /flushdns     
+# 显示DNS缓存内容
+ipconfig /displaydns
+```
+
+ 
+
+2、linux环境
+
+文件位置：/etc/hosts
+
+```bash
+systemctl restart nscd
+```
+
