--- a/杂项.md
+++ b/杂项.md
@@ -117,3 +117,10 @@ ipconfig /displaydns
 systemctl restart nscd
 ```
 
+
+
+##### GitHub无法访问、443 Operation timed out的解决办法
+
+https://juejin.cn/post/6844904193170341896
+
+更改了hosts文件没用，最后是看了一个评论，手动将dns服务器改为了 114.114.114.114在push就ok了。
