--- a/刷题/二叉树.md
+++ b/刷题/二叉树.md
@@ -233,8 +233,11 @@ public:
 
 
 
-| 题目                                                         | 时间               | 难度 | 备注                               |
-| ------------------------------------------------------------ | ------------------ | ---- | ---------------------------------- |
-| [222. 完全二叉树的节点个数](https://leetcode.cn/problems/count-complete-tree-nodes/) | 2022-5-25 21:08:34 | 中等 | 完全二叉树计算节点数量，有优化空间 |
-|                                                              |                    | 中等 |                                    |
+| 题目                                                         | 时间               | 难度 | 备注                                               |
+| ------------------------------------------------------------ | ------------------ | ---- | -------------------------------------------------- |
+| [222. 完全二叉树的节点个数](https://leetcode.cn/problems/count-complete-tree-nodes/) | 2022-5-25 21:08:34 | 中等 | 完全二叉树计算节点数量，有优化空间                 |
+| [236. 二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/) | 2022-6-2 06:15:43  | 中等 | 6min，找公共祖先                                   |
+| [103. 二叉树的锯齿形层序遍历](https://leetcode.cn/problems/binary-tree-zigzag-level-order-traversal/) | 2022-6-4 21:21:16  | 中等 | 不好做，看了题解的部分提示才ok，一开始逻辑还弄错了 |
+| [101. 对称二叉树](https://leetcode.cn/problems/symmetric-tree/) | 2022-6-4 22:50:49  | 简单 | 7min，递归，自己做出来了，不错，再看看             |
+|                                                              |                    |      |                                                    |
 
