--- a/刷题/杂项.md
+++ b/刷题/杂项.md
@@ -1,4 +1,4 @@
-## 位运算
+### 位运算
 
 
 
@@ -11,3 +11,56 @@
 
 
 
+
+
+### 前缀和数组
+
+**前缀和主要适用的场景是原始数组不会被修改的情况下，频繁查询某个区间的累加和**
+
+| 题目                                                         | 时间               | 难度 | 备注                                |
+| ------------------------------------------------------------ | ------------------ | ---- | ----------------------------------- |
+| [303. 区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/) | 2022-5-26 21:53:08 | 简单 | 5min,简单求前缀和就ok，注意下标即可 |
+| [304. 二维区域和检索 - 矩阵不可变](https://leetcode.cn/problems/range-sum-query-2d-immutable/) |                    |      |                                     |
+|                                                              |                    |      |                                     |
+
+
+
+### 差分数组
+
+https://labuladong.github.io/algo/2/18/23/
+
+**差分数组的主要适用场景是频繁对原始数组的某个区间的元素进行增减**。
+
+对 `nums` 数组构造一个 `diff` 差分数组，**`diff[i]` 就是 `nums[i]` 和 `nums[i-1]` 之差**。
+
+**这样构造差分数组 `diff`，就可以快速进行区间增减的操作**，如果你想对区间 `nums[i..j]` 的元素全部加 3，那么只需要让 `diff[i] += 3`，然后再让 `diff[j+1] -= 3` 即可：
+
+**原理很简单，回想 `diff` 数组反推 `nums` 数组的过程，`diff[i] += 3` 意味着给 `nums[i..]` 所有的元素都加了 3，然后 `diff[j+1] -= 3` 又意味着对于 `nums[j+1..]` 所有元素再减 3，那综合起来，是不是就是对 `nums[i..j]` 中的所有元素都加 3 了**？
+
+| 题目                                                         | 时间              | 难度 | 备注                                              |
+| ------------------------------------------------------------ | ----------------- | ---- | ------------------------------------------------- |
+| [1109. 航班预订统计](https://leetcode.cn/problems/corporate-flight-bookings/) | 2022-6-4 20:29:01 | 中等 | 20min，自己写出来了，构建差分数组，然后一个个相加 |
+| [1094. 拼车](https://leetcode.cn/problems/car-pooling/)      |                   |      |                                                   |
+|                                                              |                   |      |                                                   |
+
+
+
+### 二维数组的花式遍历技巧
+
+| 题目                                                         | 时间               | 难度     | 备注                                                         |
+| ------------------------------------------------------------ | ------------------ | -------- | ------------------------------------------------------------ |
+| [48. 旋转图像](https://leetcode.cn/problems/rotate-image/)   | 2022-5-31 21:31:33 | 中等     | 10min，自己找到的方法，顺时针旋转90度=先上下对称交换，然后主对角线交换 |
+| [54. 螺旋矩阵](https://leetcode.cn/problems/spiral-matrix/)  | 2022-6-2 07:27:06  | 中等     | 38min，还是要先判断方向，再确定坐标才好做！！！              |
+| [59. 螺旋矩阵 II](https://leetcode.cn/problems/spiral-matrix-ii/) | 2022-6-2 06:24:20  | 中等中等 | 60min，找了好久的错误，各种错误，最后调试还发现把二维数组维度弄错了。。。 |
+|                                                              |                    |          |                                                              |
+
+
+
+### 数学
+
+| 题目                                                         | 时间              | 难度 | 备注                                               |
+| ------------------------------------------------------------ | ----------------- | ---- | -------------------------------------------------- |
+| [172. 阶乘后的零](https://leetcode.cn/problems/factorial-trailing-zeroes/) | 2022-6-2 08:19:11 | 中等 | 短小精悍的题目，设置2个变量，再看看， 我写的复杂了 |
+| [793. 阶乘函数后 K 个零](https://leetcode.cn/problems/preimage-size-of-factorial-zeroes-function/) | TODO              |      |                                                    |
+|                                                              |                   |      |                                                    |
+|                                                              |                   |      |                                                    |
