--- a/刷题/二叉树.md
+++ b/刷题/二叉树.md
@@ -239,5 +239,5 @@ public:
 | [236. 二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/) | 2022-6-2 06:15:43  | 中等 | 6min，找公共祖先                                   |
 | [103. 二叉树的锯齿形层序遍历](https://leetcode.cn/problems/binary-tree-zigzag-level-order-traversal/) | 2022-6-4 21:21:16  | 中等 | 不好做，看了题解的部分提示才ok，一开始逻辑还弄错了 |
 | [101. 对称二叉树](https://leetcode.cn/problems/symmetric-tree/) | 2022-6-4 22:50:49  | 简单 | 7min，递归，自己做出来了，不错，再看看             |
-|                                                              |                    |      |                                                    |
+| [108. 将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/) | 2022-6-5 10:17:39  | 简单 | 13min，自己做出来了                                |
 
