--- a/刷题/动态规划.md
+++ b/刷题/动态规划.md
@@ -170,3 +170,14 @@ public:
 
 ##### 完全背包问题
 
+
+
+## 其他
+
+| 题目                                                       | 时间              | 难度 | 备注                                   |
+| ---------------------------------------------------------- | ----------------- | ---- | -------------------------------------- |
+| [62. 不同路径](https://leetcode.cn/problems/unique-paths/) | 2022-6-5 13:15:17 | 中等 | 基本的动态规划，感觉出来要用动态规划了 |
+|                                                            |                   |      |                                        |
+|                                                            |                   |      |                                        |
+|                                                            |                   |      |                                        |
+
