--- a/刷题/杂项.md
+++ b/刷题/杂项.md
@@ -58,9 +58,24 @@ https://labuladong.github.io/algo/2/18/23/
 
 ### 数学
 
+
+
 | 题目                                                         | 时间              | 难度 | 备注                                               |
 | ------------------------------------------------------------ | ----------------- | ---- | -------------------------------------------------- |
 | [172. 阶乘后的零](https://leetcode.cn/problems/factorial-trailing-zeroes/) | 2022-6-2 08:19:11 | 中等 | 短小精悍的题目，设置2个变量，再看看， 我写的复杂了 |
 | [793. 阶乘函数后 K 个零](https://leetcode.cn/problems/preimage-size-of-factorial-zeroes-function/) | TODO              |      |                                                    |
 |                                                              |                   |      |                                                    |
 |                                                              |                   |      |                                                    |
+
+
+
+## 贪心
+
+对于这种贪心算法，没有特别套路化的思维框架，主要还是靠多做题多思考，将题目的场景进行抽象的联想，找出隐藏其中的规律，从而减少计算量，进行效率优化。
+
+| 题目                                                     | 时间              | 难度 | 备注                                                         |
+| -------------------------------------------------------- | ----------------- | ---- | ------------------------------------------------------------ |
+| [134. 加油站](https://leetcode.cn/problems/gas-station/) | 2022-6-5 13:33:14 | 中等 | 10min的暴力解法超时了，后面看了提交，使用了贪心，最后一共34min，最后发现我的解法还是不行，麻烦了 |
+|                                                          |                   |      |                                                              |
+|                                                          |                   |      |                                                              |
+|                                                          |                   |      |                                                              |
