--- a/杂项.md
+++ b/杂项.md
@@ -124,3 +124,11 @@ systemctl restart nscd
 https://juejin.cn/post/6844904193170341896
 
 更改了hosts文件没用，最后是看了一个评论，手动将dns服务器改为了 114.114.114.114在push就ok了。
+
+
+
+
+
+单词
+
+order-of-magnitude 数量级
