--- a/面试/数据库内核开发.md
+++ b/面试/数据库内核开发.md
@@ -241,3 +241,27 @@
 
 ​    （5）在开源社区活跃并有积极贡献者优先；
 
+
+
+
+
+技术顾问工作：
+
+# 技术顾问
+
+25k - 50k
+
+深圳 5-10年 本科 全职
+
+职位描述
+
+\1. 主导解决腾讯云计算类产品现网疑难、重大故障等问题的快速恢复，减少问题再次发生。
+\2. 通过培训，知识库建设，工具平台建设，流程优化等手段，提升一线服务团队专业度。
+岗位要求：
+\1. 本科及以上学历，计算机及相关专业；
+\2. 5年以上工作经验，熟悉linux/windows操作系统，具备丰富内核以及性能调试经验；
+\3. 熟悉主流虚拟化技术，kvm openstack 等；
+\4. 具备计算机网络相关的基础知识；
+\5. 熟练使用shell、Python脚本处理工具；
+\6. 有激情有进取心，乐于持续学习，抗压性强，良好的服务意识和成就导向，通过腾讯云技术认证或同等资格认证的优先录取。
+
