--- a/c++/杂项.md
+++ b/c++/杂项.md
@@ -104,3 +104,74 @@ c.erase(iter++);
 
 
 好文章：[C代码中如何调用C++ C++中如何调用C](https://www.cnblogs.com/Yogurshine/p/3913073.html)
+
+
+
+
+
+RTTI(Run-Time Type Identification)
+dynamic_cast前提是编译时必须开rtti选项，可以通过-qrtti，之前由于没注意编译选项导致程序出问题，特此备忘。
+
+使用到rtti的主要是两个运算符，typeid,dynamic_cast，若是开了rtti，则会影响性能，所以并非在毕不得已的时候，还是避免使用。
+
+scidb
+
+librocksdb5/unknown 5.7.2~scidb~xenial-1 amd64
+  persistent Key-Value Store for Flash and RAM Storage
+
+librocksdb5-dbg/unknown 5.7.2~scidb~xenial-1 amd64
+  persistent Key-Value Store for Flash and RAM Storage (debug-symbols)
+
+上面这两个应该是scidb19.11使用的rocksdb版本，5.7.2，但是rocksdb5.8开始，就引入了 RTTI控制开关，默认release版本就是关闭了这个选项的，速度回快一点。
+
+Or you can also add `DEBUG_LEVEL=0` for a release build (need to turn on `USE_RTTI`).
+
+export USE_RTTI=1 && make db_bench DEBUG_LEVEL=0 SPDK_DIR=path/to/spdk
+
+
+
+## C++ 虚函数和纯虚函数的区别
+
+**首先：强调一个概念**
+
+定义一个函数为虚函数，不代表函数为不被实现的函数。
+
+定义他为虚函数是为了允许用基类的指针来调用子类的这个函数。
+
+定义一个函数为纯虚函数，才代表函数没有被实现。
+
+定义纯虚函数是为了实现一个接口，起到一个规范的作用，规范继承这个类的程序员必须实现这个函数。
+
+#### 总结：
+
+- 1、纯虚函数声明如下： virtual void funtion1()=0; 纯虚函数一定没有定义，纯虚函数用来规范派生类的行为，即接口。包含纯虚函数的类是抽象类，抽象类不能定义实例，但可以声明指向实现该抽象类的具体类的指针或引用。
+
+- 2、虚函数声明如下：virtual ReturnType FunctionName(Parameter) 虚函数必须实现，如果不实现，编译器将报错，错误提示为：
+
+  ```
+  error LNK****: unresolved external symbol "public: virtual void __thiscall ClassName::virtualFunctionName(void)"
+  ```
+
+- 3、对于虚函数来说，父类和子类都有各自的版本。由多态方式调用的时候动态绑定。
+
+- 4、实现了纯虚函数的子类，该纯虚函数在子类中就编程了虚函数，子类的子类即孙子类可以覆盖该虚函数，由多态方式调用的时候动态绑定。
+
+- 5、虚函数是C++中用于实现多态(polymorphism)的机制。核心理念就是通过基类访问派生类定义的函数。
+
+- 6、在有动态分配堆上内存的时候，析构函数必须是虚函数，但没有必要是纯虚的。
+
+- 7、友元不是成员函数，只有成员函数才可以是虚拟的，因此友元不能是虚拟函数。但可以通过让友元函数调用虚拟成员函数来解决友元的虚拟问题。
+
+- 8、析构函数应当是虚函数，将调用相应对象类型的析构函数，因此，如果指针指向的是子类对象，将调用子类的析构函数，然后自动调用基类的析构函数。
+
+有纯虚函数的类是抽象类，不能生成对象，只能派生。他派生的类的纯虚函数没有被改写，那么，它的派生类还是个抽象类。
+
+定义纯虚函数就是为了让基类不可实例化化，因为实例化这样的抽象数据结构本身并没有意义，或者给出实现也没有意义。
+
+实际上我个人认为纯虚函数的引入，是出于两个目的：
+
+- 1、为了安全，因为避免任何需要明确但是因为不小心而导致的未知的结果，提醒子类去做应做的实现。
+- 2、为了效率，不是程序执行的效率，而是为了编码的效率。
+
+
+
