--- a/刷题/二叉树.md
+++ b/刷题/二叉树.md
@@ -38,7 +38,7 @@
 | ------------------------------------------------------------ | ------------------ | ---- | ---------------------- |
 | [104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/) | 2022/05/11 19:29   | 简单 | 两种解法都做了         |
 | [543. 二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/) | 2022/05/11 19:55   | 简单 | 我的解法有问题，再做做 |
-| [144. 二叉树的前序遍历](https://leetcode.cn/problems/binary-tree-preorder-traversal/) |                    | 简单 |                        |
+| [144. 二叉树的前序遍历](https://leetcode.cn/problems/binary-tree-preorder-traversal/) | todo               | 简单 |                        |
 | [515. 在每个树行中找最大值](https://leetcode.cn/problems/find-largest-value-in-each-tree-row/) | 2022-5-14 21:31:56 | 中等 | 5min 层序遍历          |
 
 
@@ -90,7 +90,7 @@
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------------------------------------- |
 | [230. 二叉搜索树中第K小的元素](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/) | 2022/05/12 22:07 | 中等 | 思路简单                                       |
 | [538. 把二叉搜索树转换为累加树](https://leetcode.cn/problems/convert-bst-to-greater-tree/) | 2022/05/12 23:45 | 中等 | 秒！看了题解，遍历的时候要转换左右子树顺序！！ |
-|                                                              |                  |      |                                                |
+| [109. 有序链表转换二叉搜索树](https://leetcode.cn/problems/convert-sorted-list-to-binary-search-tree/) | todo             |      |                                                |
 
 
 
@@ -233,11 +233,14 @@ public:
 
 
 
-| 题目                                                         | 时间               | 难度 | 备注                                               |
-| ------------------------------------------------------------ | ------------------ | ---- | -------------------------------------------------- |
-| [222. 完全二叉树的节点个数](https://leetcode.cn/problems/count-complete-tree-nodes/) | 2022-5-25 21:08:34 | 中等 | 完全二叉树计算节点数量，有优化空间                 |
-| [236. 二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/) | 2022-6-2 06:15:43  | 中等 | 6min，找公共祖先                                   |
-| [103. 二叉树的锯齿形层序遍历](https://leetcode.cn/problems/binary-tree-zigzag-level-order-traversal/) | 2022-6-4 21:21:16  | 中等 | 不好做，看了题解的部分提示才ok，一开始逻辑还弄错了 |
-| [101. 对称二叉树](https://leetcode.cn/problems/symmetric-tree/) | 2022-6-4 22:50:49  | 简单 | 7min，递归，自己做出来了，不错，再看看             |
-| [108. 将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/) | 2022-6-5 10:17:39  | 简单 | 13min，自己做出来了                                |
+| 题目                                                         | 时间               | 难度 | 备注                                                         |
+| ------------------------------------------------------------ | ------------------ | ---- | ------------------------------------------------------------ |
+| [222. 完全二叉树的节点个数](https://leetcode.cn/problems/count-complete-tree-nodes/) | 2022-5-25 21:08:34 | 中等 | 完全二叉树计算节点数量，有优化空间                           |
+| [236. 二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/) | 2022-6-2 06:15:43  | 中等 | 6min，找公共祖先                                             |
+| [103. 二叉树的锯齿形层序遍历](https://leetcode.cn/problems/binary-tree-zigzag-level-order-traversal/) | 2022-6-4 21:21:16  | 中等 | 不好做，看了题解的部分提示才ok，一开始逻辑还弄错了           |
+| [101. 对称二叉树](https://leetcode.cn/problems/symmetric-tree/) | 2022-6-4 22:50:49  | 简单 | 7min，递归，自己做出来了，不错，再看看                       |
+| [108. 将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/) | 2022-6-5 10:17:39  | 简单 | 13min，自己做出来了                                          |
+| [113. 路径总和 II](https://leetcode.cn/problems/path-sum-ii/) | 2022-6-12 16:35:03 | 中等 | 6min，回溯法做的                                             |
+| [102. 二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/) | 2022-6-12 16:56:39 | 中等 | 6min，简单 res.push_back(tmp); // 添加到res后面就是从上往下的层序遍历 |
+| [107. 二叉树的层序遍历 II](https://leetcode.cn/problems/binary-tree-level-order-traversal-ii/) | 2022-6-12 16:50:04 | 中等 | 这个是从下往上的层序遍历！没做出来！！！ res.insert(res.begin(), tmp); // 添加到开头就是从下往上的层序遍历！！！ |
 
