--- a/刷题/刷题笔记.md
+++ b/刷题/刷题笔记.md
@@ -303,3 +303,13 @@ push_back 和 pop_back用来添加和删除字符串的
 int sum = accumulate(nums.begin(), nums.end(), 0);
 ```
 
+
+
+[118. 杨辉三角](https://leetcode.cn/problems/pascals-triangle/)
+
+```c++
+// vector<vector<int>> v(numRows, vector<int>(numRows, 0));
+vector<vector<int>> v(numRows, vector<int>());
+// vector如果第二维度不给初始化大小，则通过 v[i][j]访问不到，即使你之前用什么 reserve调整了大小，还是resize靠谱。
+```
+
