--- a/刷题/杂项.md
+++ b/刷题/杂项.md
@@ -56,16 +56,27 @@ https://labuladong.github.io/algo/2/18/23/
 
 
 
+### 其他数组
+
+| 题目                                                         | 时间               | 难度 | 备注                                          |
+| ------------------------------------------------------------ | ------------------ | ---- | --------------------------------------------- |
+| [128. 最长连续序列](https://leetcode.cn/problems/longest-consecutive-sequence/) | 2022-6-12 17:18:09 | 中等 | 不会，看了题解，居然还是字节跳动二面原题 TODO |
+|                                                              |                    |      |                                               |
+|                                                              |                    |      |                                               |
+|                                                              |                    |      |                                               |
+
+
+
 ### 数学
 
-
-
-| 题目                                                         | 时间              | 难度 | 备注                                               |
-| ------------------------------------------------------------ | ----------------- | ---- | -------------------------------------------------- |
-| [172. 阶乘后的零](https://leetcode.cn/problems/factorial-trailing-zeroes/) | 2022-6-2 08:19:11 | 中等 | 短小精悍的题目，设置2个变量，再看看， 我写的复杂了 |
-| [793. 阶乘函数后 K 个零](https://leetcode.cn/problems/preimage-size-of-factorial-zeroes-function/) | TODO              |      |                                                    |
-|                                                              |                   |      |                                                    |
-|                                                              |                   |      |                                                    |
+| 题目                                                         | 时间               | 难度 | 备注                                                      |
+| ------------------------------------------------------------ | ------------------ | ---- | --------------------------------------------------------- |
+| [172. 阶乘后的零](https://leetcode.cn/problems/factorial-trailing-zeroes/) | 2022-6-2 08:19:11  | 中等 | 短小精悍的题目，设置2个变量，再看看， 我写的复杂了        |
+| [793. 阶乘函数后 K 个零](https://leetcode.cn/problems/preimage-size-of-factorial-zeroes-function/) | TODO               |      |                                                           |
+| [204. 计数质数](https://leetcode.cn/problems/count-primes/)  | 2022-6-11 10:54:26 | 中等 | todo，精妙解法再看看                                      |
+| [66. 加一](https://leetcode.cn/problems/plus-one/)           | 2022-6-11 11:20:26 | 简单 | 2022-6-11 11:20:26                                        |
+| [118. 杨辉三角](https://leetcode.cn/problems/pascals-triangle/) | 2022-6-12 16:06:31 | 简单 | 22min，因为一个vector初始化问题没有给大小，找了好久的原因 |
+|                                                              |                    |      |                                                           |
 
 
 
@@ -79,3 +90,133 @@ https://labuladong.github.io/algo/2/18/23/
 |                                                          |                   |      |                                                              |
 |                                                          |                   |      |                                                              |
 |                                                          |                   |      |                                                              |
+
+
+
+其他
+
+| 题目                                                         | 时间              | 难度 | 备注                                                 |
+| ------------------------------------------------------------ | ----------------- | ---- | ---------------------------------------------------- |
+| [10. 正则表达式匹配](https://leetcode.cn/problems/regular-expression-matching/) | 2022-6-7 21:41:32 | 难   | 难，看了题解之后，写了30min。                        |
+| [146. LRU 缓存](https://leetcode.cn/problems/lru-cache/)     | 2022-6-8 19:07:11 | 中等 | 难，44min，hash表和双向链表的结合                    |
+| [17. 电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/) | 2022-6-8 20:11:14 | 中等 | 19min，回溯自己做的，看了很多stl的资料，再做做！TODO |
+|                                                              |                   |      |                                                      |
+
+
+
+## 滑动窗口
+
+https://labuladong.github.io/algo/1/11/
+
+```c++
+/* 滑动窗口算法框架 */
+void slidingWindow(string s, string t) {
+    unordered_map<char, int> need, window;
+    for (char c : t) need[c]++; // 需要覆盖的
+    
+    int left = 0, right = 0;
+    int valid = 0; 
+    while (right < s.size()) {
+        // c 是将移入窗口的字符
+        char c = s[right];
+        // 增大窗口
+        right++;
+        // 进行窗口内数据的一系列更新
+        ...
+
+        /*** debug 输出的位置 ***/
+        printf("window: [%d, %d)\n", left, right);
+        /********************/
+        
+        // 判断左侧窗口是否要收缩
+        while (window needs shrink) {
+            // d 是将移出窗口的字符
+            char d = s[left];
+            // 缩小窗口
+            left++;
+            // 进行窗口内数据的一系列更新
+            ...
+        }
+    }
+}
+```
+
+1、我们在字符串 `S` 中使用双指针中的左右指针技巧，初始化 `left = right = 0`，把索引**左闭右开**区间 `[left, right)` 称为一个「窗口」。
+
+2、我们先不断地增加 `right` 指针扩大窗口 `[left, right)`，**直到窗口中的字符串符合要求**（包含了 `T` 中的所有字符）。
+
+3、此时，我们停止增加 `right`，转而不断增加 `left` 指针缩小窗口 `[left, right)`，直到窗口中的字符串不再符合要求（不包含 `T` 中的所有字符了）。同时，每次增加 `left`，我们都要更新一轮结果。
+
+4、重复第 2 和第 3 步，直到 `right` 到达字符串 `S` 的尽头。
+
+
+
+**现在开始套模板，只需要思考以下四个问题**：
+
+1、当移动 `right` 扩大窗口，即加入字符时，应该更新哪些数据？
+
+2、什么条件下，窗口应该暂停扩大，开始移动 `left` 缩小窗口？
+
+3、当移动 `left` 缩小窗口，即移出字符时，应该更新哪些数据？
+
+4、我们要的结果应该在扩大窗口时还是缩小窗口时进行更新？
+
+| 题目                                                         | 时间               | 难度 | 备注                                                         |
+| ------------------------------------------------------------ | ------------------ | ---- | ------------------------------------------------------------ |
+| [76. 最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/) | 2022-6-10 16:59:39 | 困难 | 双指针滑动窗口                                               |
+| [567. 字符串的排列](https://leetcode.cn/problems/permutation-in-string/) | 2022-6-11 00:14:53 | 中等 | 本来10min框架就写完了，但是犯了两个错误，一直找了30min才搞定，第一个是缩小窗口的时候window窗口忘记处理了，另外一个是判断窗口有效性的时候valid比较错了对象！！！ |
+| [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/) | 2022-6-11 23:11:32 | 中等 | 9min， 滑动窗口，熟练多了                                    |
+| [3. 无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/) | 2022-6-11 23:21:35 | 中等 | 14min， 这道滑动窗口，这几年做了好几次了。。。               |
+
+
+
+[567. 字符串的排列](https://leetcode.cn/problems/permutation-in-string/)
+
+特别注意，valid是和need做比较，而不是和s1.size做比较，因为s1可能存在重复元素！！！
+
+```c++
+class Solution {
+public:
+    bool checkInclusion(string s1, string s2) {
+        // 2022-6-11 00:14:53 滑动窗口
+        unordered_map<char, int> need, window;
+        int left = 0, right = 0;
+        for(char c : s1) need[c]++;
+
+        int size = s2.size();
+        int valid = 0;
+        while(right < size){
+            char c = s2[right]; // [left, right) right一开始是添加的0进来
+            right++;
+            // 扩大窗口之后，要处理什么数据
+            if(need.count(c)){ // 注意！！！ 这里不能直接使用need[c]来判断是否需要这个值，因为need[c] 会直接把不需要的c也put到map里面！
+                window[c]++;
+                if(window[c] == need[c]){
+                    valid++;
+                }
+            }
+            
+            // 在这里debug
+            // cout << "left, right, valid:" << left << ":" << right << ":" << valid << endl;
+
+            // 缩小窗口
+            // while(valid == s1.size()){ // 此时暂停窗口扩大，要判断了
+            while(valid == need.size()){ // 注意!!!valid要判断是否等于need, 而不是s1,因为s1中可能存在重复元素！导致valid会一直小于s1的size()
+                // 判断此时是否满足条件了
+                if((right - left) == s1.size()){ // [left, right)
+                    return true;
+                }
+                char d = s2[left++];
+                if(need.count(d)){
+                    if(window[d] == need[d]){
+                        valid--;
+                    }
+                    window[d]--; // 不要漏了这个更新的
+                }
+            }
+        }
+        return false;
+    }
+};
+```
+
