--- a/刷题/链表.md
+++ b/刷题/链表.md
@@ -1,10 +1,113 @@
 # 链表
 
+### 双指针技巧秒杀七道链表题目
+
+单链表相关的题目，双指针的运用是非常广泛的。
+
+| 题目                                                         | 时间               | 难度 | 备注                                                         |
+| ------------------------------------------------------------ | ------------------ | ---- | ------------------------------------------------------------ |
+| [19. 删除链表的倒数第 N 个结点](https://leetcode.cn/problems/remove-nth-node-from-end-of-list/) | 2022-6-9 20:35:00  | 中等 | 15min，还是要添加虚拟dummy节点方便很多啊。                   |
+| [21. 合并两个有序链表](https://leetcode.cn/problems/merge-two-sorted-lists/) | 2022-6-7 20:09:57  | 简单 | 10min，注意添加一个虚拟头结点，会方便一些。                  |
+| [23. 合并K个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/) | 2022-6-7 20:20:35  | 困难 | 15min，用到优先队列的小顶堆才可以                            |
+| [141. 环形链表](https://leetcode.cn/problems/linked-list-cycle/) | 2022-6-9 20:51:40  | 简单 | 6min, 提交了3次才通过，一次走2格的指针一定要判断好 if(fast && fast->next)这样才行！ |
+| [142. 环形链表 II](https://leetcode.cn/problems/linked-list-cycle-ii/) | 2022-6-10 14:24:30 | 中等 | 6min. 比上面更进一步，需要返回环形链表的入口节点。           |
+| [160. 相交链表](https://leetcode.cn/problems/intersection-of-two-linked-lists/) | 2022-6-10 16:16:51 | 简单 | 13min，先计算长度，然后一个先走一个长度的差，然后两个同时走。还可以将第一个链表节点存入unordered_set<ListNode *>中，然后遍历另外一个链表。还有一种双指针法更简单！！！ |
+| [876. 链表的中间结点](https://leetcode.cn/problems/middle-of-the-linked-list/) | 2022-6-10 16:38:12 | 简单 | 1min快慢指针直接解决。                                       |
 
 
-| 题目                                                         | 时间              | 难度 | 备注                                    |
-| ------------------------------------------------------------ | ----------------- | ---- | --------------------------------------- |
-| [206. 反转链表](https://leetcode.cn/problems/reverse-linked-list/) | 2022-6-5 10:34:14 | 简单 | 使用了递归反转的链表 TODO，使用遍历试试 |
-|                                                              |                   |      |                                         |
-|                                                              |                   |      |                                         |
-|                                                              |                   |      |                                         |
+
+[21. 合并两个有序链表](https://leetcode.cn/problems/merge-two-sorted-lists/)
+
+**代码中还用到一个链表的算法题中是很常见的「虚拟头结点」技巧，也就是 `dummy` 节点**。你可以试试，如果不使用 `dummy` 虚拟节点，代码会复杂很多，而有了 `dummy` 节点这个占位符，可以避免处理空指针的情况，降低代码的复杂性。
+
+
+
+[23. 合并K个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/)
+
+```c++
+class Solution {
+public:
+    ListNode* mergeKLists(vector<ListNode*>& lists) {
+        // 2022-6-7 20:20:35
+        // 优先队列 堆结构 获取k个链表中的最小值，所以是小顶堆
+        auto cmp = [](ListNode* n1, ListNode* n2){
+            return n1->val > n2->val; // n1大，排在前面，而top弹出的是last值，所以就是小顶堆
+        };
+        priority_queue<ListNode*, vector<ListNode*>, decltype(cmp)> pq(cmp);
+        
+        int n = lists.size();
+        for(int i=0; i<n; i++){
+            if(lists[i] != nullptr){
+                pq.push(lists[i]);
+                lists[i] = lists[i]->next;
+            }
+        }
+        ListNode* dummy = new ListNode(-1);
+        ListNode* p = dummy;
+
+        while(!pq.empty()){
+            ListNode* tmp = pq.top();
+            p->next = tmp;
+            if(tmp->next){
+                pq.push(tmp->next);
+            }
+            pq.pop();
+            p = p->next;
+        }
+        return dummy->next;
+    }
+};
+```
+
+
+
+### 递归魔法：反转单链表
+
+https://labuladong.github.io/algo/2/17/17/
+
+| 题目                                                         | 时间              | 难度 | 备注                                                         |
+| ------------------------------------------------------------ | ----------------- | ---- | ------------------------------------------------------------ |
+| [206. 反转链表](https://leetcode.cn/problems/reverse-linked-list/) | 2022-6-5 10:34:14 | 简单 | 使用了递归反转的链表，使用遍历试试                           |
+| [92. 反转链表 II](https://leetcode.cn/problems/reverse-linked-list-ii/) | 2022-6-7 20:48:25 | 中等 | 确实不简单，分两步，先反转前N个，然后在递归成这种情况。注意递归的时候，head也要移动！！ |
+
+[92. 反转链表 II](https://leetcode.cn/problems/reverse-linked-list-ii/)
+
+```c++
+class Solution {
+public:
+    ListNode* successor;
+    ListNode* reverseBetween(ListNode* head, int left, int right) {
+        // 2022-6-7 20:48:25
+        if(left == 1){
+            // 到该节点了，只要反转后面的right个就ok了
+            return reverseN(head, right);
+        }
+        head->next = reverseBetween(head->next, left-1, right-1); // 注意，这里head也要向后走
+        return head;
+    }
+
+    // 反转前N个元素
+    ListNode* reverseN(ListNode* head, int n){
+        if(n == 1){
+            successor = head->next;
+            return head;   
+        };
+        ListNode* node = reverseN(head->next, n-1); // 注意，这里head也要向后走
+        head->next->next = head; // 让反转后的链表尾巴接上这个头结点
+        head->next = successor;
+        return node;
+    }
+};
+```
+
+
+
+#### 如何 K 个一组反转链表
+
+[25. K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/)
+
+
+
+#### 如何判断回文链表
+
+[234. 回文链表](https://leetcode.cn/problems/palindrome-linked-list/)
